fixed margin on mobile version

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -18,31 +18,37 @@
   }
 
   &__tooltip {
-    text-decoration: none;
-    position: absolute;
-    right: 100%;
-    top: 50%;
-    transform: translateY(-50%);
-    display: block;
-    width: max-content;
-    padding-right: 20px;
-
-    font-size: 12px;
-    font-weight: 700;
-    line-height: 16px;
-    letter-spacing: 2px;
-    color: #292929;
-    text-transform: uppercase;
     opacity: 0;
-    pointer-events: none;
-
-    transition: opacity 0.3s;
   }
 
-  &:hover &__tooltip {
-    opacity: 1;
-    pointer-events: all;
-   }
+  @include onTablet {
+    &__tooltip {
+      text-decoration: none;
+      position: absolute;
+      right: 100%;
+      top: 50%;
+      transform: translateY(-50%);
+      display: block;
+      width: max-content;
+      padding-right: 20px;
+
+      font-size: 12px;
+      font-weight: 700;
+      line-height: 16px;
+      letter-spacing: 2px;
+      color: #292929;
+      text-transform: uppercase;
+      opacity: 0;
+      pointer-events: none;
+
+      transition: opacity 0.3s;
+    }
+
+    &:hover &__tooltip {
+      opacity: 1;
+      pointer-events: all;
+     }
+  }
 
   &--phone {
     background-image: url("../images/call.svg");
