--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,7 +1,7 @@
 .page {
   font-family: 'Poppins', sans-serif;
   background-color: $nearBlack;
-  scroll-behavior: smooth 2s;
+  scroll-behavior: smooth;
 
   &__body {
     margin: 0;
@@ -26,7 +26,7 @@
     right: 0;
     transform: translateX(-100%);
 
-    transition: transform 0.4s cubic-bezier(.47,-0.32,.63,1.42);
+    transition: transform 0.6s cubic-bezier(.47,-0.32,.63,1.42);
 
     &:target {
       transform: translateX(0);
@@ -46,6 +46,14 @@
 
     @include onDesktop {
       margin-bottom: 160px;
+    }
+
+    &--container-form {
+      margin-bottom: 48px;
+
+      @include onTablet {
+        margin-bottom: 0;
+      }
     }
   }
   &__section-title {
