--- a/src/styles/blocks/reset.scss
+++ b/src/styles/blocks/reset.scss
@@ -2,15 +2,6 @@
   box-sizing: border-box;
 }
 
-.page {
-  font-family: 'Poppins', sans-serif;
-
-
-  &__body {
-    margin: 0;
-  }
-}
-
 h1,h2,p {
   margin: 0;
 }
